# bath

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: config.rs  db.rs  export.rs  main.rs  profile_editor.rs  tui_app.rs
src/tui/: app.rs  commands.rs  daisyui_themes.rs  dialogs.rs  editor.rs  input.rs  mod.rs  select.rs  state.rs  theme.rs  util.rs  view.rs
src/tui/ui/: detail.rs  header.rs  main_list.rs  mod.rs
