[package]
name = "bath"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["ransomware <4thel00z@gmail.com>"]
description = "A TUI tool to manage and export environment variable profiles"
repository = "https://github.com/4thel00z/bath"
homepage = "https://github.com/4thel00z/bath"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "env", "gcc", "toolchain"]
default-run = "bath"


[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
rusqlite = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28.1"
ratatui = "0.20"


[profile.release]
opt-level = 3
lto = "thin"

[[bin]]
name = "bath"
path = "src/main.rs"